<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_cat"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_image_size"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cat3" />


        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            android:src="@drawable/ic_paw"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/image_cat" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            android:text="@string/cat_cafe"
            android:textColor="#D35F5F"
            android:textSize="34sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_cat" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            android:gravity="center"
            android:text="@string/address"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            android:gravity="center"
            android:text="@string/opening_hours"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            android:gravity="center"
            android:text="@string/tel"
            android:textColor="#DE8787"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hours" />

        <TextView
            android:id="@+id/reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            android:text="@string/make_a_reservation"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <EditText
            android:id="@+id/reservation_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reservation" />

        <Button
            android:id="@+id/reservation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_related_view"
            android:layout_marginLeft="@dimen/margin_between_related_view"
            android:layout_marginRight="@dimen/margin_between_related_view"
            android:layout_marginTop="@dimen/margin_between_related_view"
            android:background="#DE8787"
            android:text="@string/reserve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reservation_name" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>

